--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
 
             </div>
             <div class="nav-content" id="projecten">
-                <h3><a href="index.html">projecten</a></h3>
+                <h3><a href="index.html#projectpage">projecten</a></h3>
 
             </div>
             <div class="nav-content" id="contact">
-                <h3><a href="index.html">Contact</a></h3>
+                <h3><a href="index.html#contactpage">Contact</a></h3>
 
             </div>
 
@@ -76,7 +76,7 @@
 
                 </div>
                 <div class="nav-content" id="contact">
-                    <h3><a href="index.html">Contact</a></h3>
+                    <h3><a href="index.html#contactpage">Contact</a></h3>
 
                 </div>
 
@@ -132,7 +132,7 @@
 
                 </div>
                 <div class="nav-content" id="contact">
-                    <h3><a href="index.html">Contact</a></h3>
+                    <h3><a href="index.html#contactpage">Contact</a></h3>
 
                 </div>
             </nav>
@@ -182,17 +182,18 @@
 
                 </div>
                 <div class="nav-content" id="projecten">
-                    <h3><a href="index.html#portfoliopage">projecten</a></h3>
+                    <h3><a href="index.html#projectpage">projecten</a></h3>
 
                 </div>
                 <div class="nav-content" id="contact">
-                    <h3><a href="index.html">Contact</a></h3>
+                    <h3><a href="index.html#contactpage">Contact</a></h3>
 
                 </div>
             </nav>
             <h1>
                 Contact
             </h1>
+            <div id="contactenpagina">
             <div id="nummer">
                 <div id="calllogo">
                     <img src="IMG/call.gif" alt="calllogo">
@@ -210,7 +211,7 @@
             <div id="mail">
                 <a href="mailto:302645567@student.segbroek.nl"><img src="IMG/mail.gif" alt="mail"></a>
             </div>
-            
+        </div>
         </div>
     
 
