--- a/HTML/opdrachten-site.html
+++ b/HTML/opdrachten-site.html
@@ -6,10 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="/JS/main.js"defer></script>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/opdrachtenstyle.css">
 </head>
 <body>
-    <h1>JavaScript Functions</h1>
-    
+    <div id="backtoindex">
+        <nav id="nav">
+            <div class="nav-content" id="Naam">
+                <h3>Luka Trninic<h3>
+            </div>
+            <div class="nav-content" id="profile">
+                <h3><a href="/index.html">Profile</a></h3>
+
+            </div>
+            <div class="nav-content" id="career">
+                <h3><a href="/index.html#careerpage">career</a></h3>
+
+            </div>
+            <div class="nav-content" id="projecten">
+                <h3><a href="/index.html#projectpage">projecten</a></h3>
+
+            </div>
+            <div class="nav-content" id="contact">
+                <h3><a href="/index.html#contactpage">Contact</a></h3>
+
+            </div>
+
+        </nav>
+        <div id="buttontext">    
+    <h1>
+        JavaScript Functions
+    </h1>
+</div>
+        <div id="buttons">
+    <button onclick="temperatuur()">Opdracht 1</button>
+    <button onclick="cijfers()">Opdracht 2</button>
+    <button onclick="numbers()">Opdracht 3</button>
+   </div>
+   <img src="/IMG/dancing.gif" alt="gif">
+   <div id="gif">
+   <img src="/IMG/dancing.gif" alt="gif">
+   </div>
+</div>
 </body>
 </html>
