meer html bestanden en css bestanden

--- a/HTML/pofo-opdracht-site.html
+++ b/HTML/pofo-opdracht-site.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="/JS/main.js"defer></script>
-    <link rel="stylesheet" href="/CSS/opdrachtenstyle.css">
-</head>
+    <link rel="stylesheet" href="/CSS/pofo-opdrachtstyle.css">
+
 <body>
     <div id="backtoindex">
         <nav id="nav">
@@ -15,7 +15,7 @@
                 <h3>Luka Trninic<h3>
             </div>
             <div class="nav-content" id="profile">
-                <h3><a href="/index.html">Profile</a></h3>
+                <h3><a href="/index.html#profilepage">Profile</a></h3>
 
             </div>
             <div class="nav-content" id="career">
@@ -36,20 +36,7 @@
             </div>
 
         </nav>
-        <div id="buttontext">    
-    <h1>
-        JavaScript Functions
-    </h1>
-</div>
-        <div id="buttons">
-    <button class="button"onclick="temperatuur()">Opdracht 1</button>
-    <button class="button"onclick="cijfers()">Opdracht 2</button>
-    <button class="button"onclick="numbers()">Opdracht 3</button>
-   </div>
-   <img src="/IMG/dancing.gif" alt="gif">
-   <div id="gif">
-   <img src="/IMG/dancing.gif" alt="gif">
-   </div>
-</div>
+    </div>
 </body>
+
 </html>
