--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </div>
 
         </div>
+    
 
         <div id="careerpage">
             <nav id="nav">
@@ -163,7 +164,7 @@
                     </p>
                 </div>
                 <div id="projectwrapper2">
-                    <a href=""><img src="IMG/ik.jpg" alt="foto"></a>
+                    <a href="/HTML/pofo-opdracht-site.html"><img src="IMG/ik.jpg" alt="foto"></a>
                     <p>Pofo Opdracht</p>
                 </div>
             </div>
@@ -211,6 +212,7 @@
             <div id="mail">
                 <a href="mailto:302645567@student.segbroek.nl"><img src="IMG/mail.gif" alt="mail"></a>
             </div>
+        </div>
         </div>
         </div>
     
