--- a/HTML/pofo-opdracht-site.html
+++ b/HTML/pofo-opdracht-site.html
@@ -34,9 +34,14 @@
                 <h3><a href="https://github.com/LTrninic/opdracht-pofo/blob/main/JS/main.js">Code</a></h3>
 
             </div>
-
-        </nav>
     </div>
+    </nav>
+
+    <div id="pofo-content">
+        <h1>hallo</h1>
+    </div>
+
+
 </body>
 
 </html>
