--- a/html/pofo-opdracht-site.html
+++ b/html/pofo-opdracht-site.html
@@ -31,15 +31,24 @@
 
             </div>
             <div class="nav-content" id="code">
-                <h3><a href="https://github.com/LTrninic/opdracht-pofo/blob/main/JS/main.js">Code</a></h3>
+                <h3><a href="https://github.com/LTrninic/opdracht-pofo/blob/main/index.html">Code</a></h3>
 
             </div>
     </div>
     </nav>
 
     <div id="pofo-content">
-        <h1>hallo</h1>
+        <h1>Mijn portfolio pagina</h1>
     </div>
+    <div id="pofo-foto">
+        <img src="/IMG/pofopage.png" alt="png">
+    </div>
+    
+    <p id="p">Dit is mijn portfolio pagina hierboven ik heb hier hard mijn best voor gedaan<br> heel veel code geschreven en heel veel onderzoek gedaan boven bij Code<br>
+    staat een verwijzing naar de code hieronder had ik perongeluk mijn code verwijderd  <br>om
+    3 uur snachts</p>
+    <br>
+    <img src="/IMG/siteweg.gif" alt="gif">
 
 
 </body>
