--- a/html/pofo-opdracht-site.html
+++ b/html/pofo-opdracht-site.html
@@ -49,7 +49,14 @@
     3 uur snachts</p>
     <br>
     <img src="/IMG/siteweg.gif" alt="gif">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Oswald:wght@700&family=PT+Sans:ital@1&display=swap" rel="stylesheet">
+    
 
 </body>
 
