--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     Projecten
                 </H1>
                 <p>
-                    Dit is mijn portfolio pagina
+                    Dit is mijn projectpagina
                     hier komen mijn projecten te staan die ik gemaakt heb
                     druk op de foto en je wordt gestuurd naar het project
 
